--- a/src/app/component/app-welcome/app-welcome.component.html
+++ b/src/app/component/app-welcome/app-welcome.component.html
@@ -17,8 +17,13 @@
 -->
 <h2>GlassCat Server Administration Console</h2>
 <mat-card class="app-welcome-card-version">
-  <mat-icon>info</mat-icon>
-  <strong>Welcome</strong> GlassCat Server Open Source Edition 1.0.0 (Korat).
+  <div class="app-card-title">
+      <mat-icon class="app-card-title-icon">info</mat-icon>
+      <div class="app-card-title-text">
+        <strong>Welcome</strong>
+        GlassCat Server Open Source Edition 1.0.0 <em>(Korat)</em>.
+      </div>
+  </div>
 </mat-card>
 <mat-card class="app-welcome-card">
   <mat-card-header>
